# nixie-tube-clock

./: .gitignore  CMakeLists.txt  README.md  avr.c  avr.h  clock.c  clock.h  gpio.h  led.c  led.h  main.c  wifi.c  wifi.h
.github/workflows/: build-image-server-side.yaml  verify-clock-source.yaml  verify-server-side.yaml
eagle/: eagle.epf  nixie-tube-clock.brd  nixie-tube-clock.sch
eagle/Gerbers/: nixie-tube-clock.cmp  nixie-tube-clock.drd  nixie-tube-clock.dri  nixie-tube-clock.gpi  nixie-tube-clock.milling  nixie-tube-clock.plc  nixie-tube-clock.pls  nixie-tube-clock.sol  nixie-tube-clock.stc  nixie-tube-clock.sts
server/: Dockerfile  docker-compose.yml  go.mod  go.sum  main.go
test/: avr_mock.c  clock_all_secs_tc.c  clock_common.c  clock_common.h  clock_mock.c  clock_tc.c  data_generator.c  framework.c  framework.h  led_all_secs_tc.c  led_common.c  led_common.h  led_generator.c  led_mock.c  led_tc.c  mock.c  mock.h  wifi_mock.c  wifi_tc.c
